# kojamp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  README.crates.io.md  README.md  USAGE.md  WARN_MESSAGE.md  kojamp.env
.cargo/: config.toml
crates/kojamp_builder/: Cargo.toml
crates/kojamp_builder/src/: config.rs  lib.rs
docker/dot-bash/: .bash_profile  .bashrc
scripts/: .bashrc  .gitignore  __main__.py  main.py  publish.py
scripts/colors/: __init__.py  core.py
scripts/core/: __init__.py  env.py  target_files.py  urls.py
scripts/error_types/: __init__.py  base_error.py
scripts/error_types/derived_errors/: __init__.py  command_error.py  docker_engine.py  file_not_found.py  unfetchable_file.py  unfetchable_url.py
scripts/kojamp-docker/: Cargo.toml
scripts/kojamp-docker/src/: main.rs
scripts/models/: crates_io_bridge.py  dockerhub_bridge.py  file.py  local_git_bridge.py  program_version.py  project.py  remote_git_bridge.py
scripts/panel/: banner.py  screen.py
scripts/utils/: cmdline.py  file.py  publisher.py  regex.py
scripts/visual/: alerts.py  banner.py
src/: globals.rs  kojamp.env  kojamp_env.rs  main.rs
src/commands/: bye.rs  hello.rs  mod.rs
src/core/: mod.rs
src/core/consts/: commands.rs  exit_status.rs  files_and_dirs.rs  mod.rs  program.rs  report_badges.rs
src/core/contracts/: add_from.rs  get_inner.rs  is_valid.rs  mod.rs  unpack.rs
src/core/models/: mod.rs  project_authors.rs  project_fields.rs  (+3 more)
src/essentials/: kojamp_error.rs  mod.rs  report_messages.rs
src/kojamp/: app.rs  app_factory.rs  app_trait.rs  builder.rs  cli_app.rs  kojamp_cli.rs  kojamp_output.rs  mod.rs
src/utils/: arg_test.rs  arg_testing.rs  array.rs  boxed.rs  error.rs  error_shorthand.rs  fs.rs  io.rs  mapping.rs  mod.rs  string.rs  strings.rs  test.rs
(+64 files in other folders)
