[package]
name = "kojamp"
version = "0.0.4"
edition = "2021"
authors = ["nasccped <pdb.contact@gmail.com>"]
description = "Some kind of basic 'n academic Java/Kotlin project-manager tool"
documentation = "https://github.com/nasccped/kojamp"
readme = "README.md"
homepage = "https://github.com/nasccped/kojamp"
license = "Apache-2.0"
keywords = ["kotlin", "java", "rust", "cli", "project-manager"]
categories = ["command-line-utilities"]
exclude = ["target/", ".*", "WARN_MESSAGE.md", "USAGE.md", "INSTALL.md"]
publish = ["kojamp"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "4.5.34"
colored = "3.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
