[workspace]
members = ["crates/*"]
resolver = "3"

[package]
name = "kojamp"
version = "0.1.2"
edition = "2021"
authors = ["nasccped <pdbt.contact@gmail.com>"]
description = "Some kind of basic 'n academic Java/Kotlin project-manager tool 📦"
documentation = "https://github.com/nasccped/kojamp"
readme = "README.crates.io.md"
repository = "https://github.com/nasccped/kojamp"
license = "Apache-2.0"
keywords = ["kotlin", "java", "rust", "cli", "project-manager"]
categories = ["command-line-utilities"]
exclude = [
  "target/",
  ".git/",
  ".gitignore",
  "WARN_MESSAGE.md",
  "USAGE.md",
  "INSTALL.md",
  "Dockerfile",
  "scripts/",
  "docker/",
  "README.md"
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = "4.5.34"
colored = "3.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
toml = "0.8.22"

[workspace.dependencies]
toml = "0.8.22"

[build-dependencies]
kojamp_builder = { path = "./crates/kojamp_builder" }
